# quest-net-src

./: .gitignore  ARCHITECTURE_REVIEW.md  CLAUDE.md  PERFORMANCE_ROADMAP.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: verify.yml
docs/: perf-statesync-immer-patches.md
public/: index.html
scripts/: build-wasm.mjs  check-wasm-package.mjs  generate-default-voxel-stamps.mjs
src/: App.css  App.tsx  DEVELOPMENT_NOTES.md  GameRoom.tsx  index.css  index.tsx  version.ts  vite-env.d.ts
src/actions/: characterActions.ts  combatActions.ts  equipmentActions.ts  itemActions.ts  skillActions.ts  transferActions.ts
src/components/: CloudBackupBanner.tsx  CloudBackupManager.tsx  GameInterface.tsx  LobbySystem.tsx  RoomSelector.tsx  StorageQuotaErrorOverlay.tsx  cloudBackupUi.ts
src/config/: googleDrive.ts
src/data/: defaultVoxelStamps.ts
src/hooks/: useAnimatedDrawer.ts  useAutoReconnect.ts  useCharacter.ts  useConnectionHealth.ts  useDebounced.ts  useEnvImageSync.ts  useGamePersistence.ts  useGameState.ts  useIdleRefresh.ts  useImageSync.ts  useIsMobile.ts  usePeerSync.ts  usePeerTracking.ts  useReferenceResolver.ts  useRelayWatchdog.ts  useRoom.ts
src/legacy/: QuestNetV1Migration.ts
src/migrations/: MigrationStorage.ts  campaignMigrations.ts  contextBackup.ts  types.ts  (+19 more)
wasm/voxel-mesher/: Cargo.toml
wasm/voxel-mesher/pkg/: package.json  voxel_mesher.d.ts  voxel_mesher.js  voxel_mesher_bg.js  voxel_mesher_bg.wasm  voxel_mesher_bg.wasm.d.ts
wasm/voxel-mesher/src/: lib.rs  svo.rs
(+629 files in other folders)
